--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -8,7 +8,8 @@ html, body {
     padding: 0;
 }
 $colors: (
-    'gradient' : hsl(6, 100%, 80%) to hsl(335, 100%, 65%),
+    'gradient-from' : hsl(6, 100%, 80%),
+    'gradient-to' : hsl(335, 100%, 65%),
     'pale-blue' : hsl(243, 100%, 93%),
     'grayish-blue' : hsl(229, 7%, 55%),
     'dark-blue' : hsl(228, 56%, 26%),
