--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -48,6 +48,7 @@ main {
     font-size: map-get($typography, 'font-size');
     background-color: map-get($colors, 'dark-blue');
     border-radius: 10px;
+    position: relative;
     &__message {
         text-align: center;
         span {
@@ -88,7 +89,7 @@ main {
         padding: 1rem;
         font-weight: 700;
         color: map-get($colors, 'very-dark-blue');
-        background-color: map-get($colors, 'pale-blue');
+        background-color: lighten(map-get($colors, 'pale-blue'), 90%);
         font-size: 2rem;
         border-radius: 10px;
         width: 130px;
