--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
 *::before,
 *::after {
     box-sizing: border-box;
@@ -6,3 +7,14 @@ html, body {
     margin: 0;
     padding: 0;
 }
+$colors: (
+    'gradient' : hsl(6, 100%, 80%) to hsl(335, 100%, 65%),
+    'pale-blue' : hsl(243, 100%, 93%),
+    'grayish-blue' : hsl(229, 7%, 55%),
+    'dark-blue' : hsl(228, 56%, 26%),
+    'very-dark-blue' : hsl(229, 57%, 11%)
+);
+$typography: (
+    'font-size' : 14px,
+    'font-family' : 'Raleway'
+);
