--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,27 +1,37 @@
 @include medium-screen {
-    main {
+    body {
+        height: 100vh;
         background-image: url(../images/bg-desktop.png);
         background-color: map-get($colors, 'very-dark-blue');
         background-size: contain;
         background-position: right 0 bottom -30%;
-        display: grid;
-        grid-template-columns: 20% 1fr 1fr 20%;
-        grid-template-areas: 
-            '. storage  progress .';
-        justify-items: end;
-        grid-column-gap: 1rem;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+    main {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        width: 100%;
     }
     .storage {
-        grid-area: storage;
-        align-items: end;
+        max-width: 25%;
+        height: 140px;
+        margin-right: 2rem;
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+
+        &__logo {
+            margin-bottom: 1rem;
+        }
     }
     .progress {
-        grid-area: progress;
-        justify-self: start;
-        width: 100%;
-        &__full {
-            position: relative;
-        }
+        max-width: 25rem;
+        height: 80px;
+        align-self: flex-end;
         &__message {
             text-align: left;
         }
@@ -30,7 +40,8 @@
             left: 38%;
             border-radius: 10px 10px 0 10px;
             position: absolute;
-            align-items: start;
+            vertical-align: text-top;
+            transform: translate(94px, -2px);
             &::before {
                 content: ' ';
                 width: 0;
