--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,4 +1,4 @@
-main {
+body {
     height: 100vh;
     max-width: 100%;
     background-image: url(../images/bg-mobile.png);
@@ -11,12 +11,19 @@ main {
     justify-content: center;
     align-items: center;
 }
+main {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .storage {
     width: 70%;
     height: auto;
     display: flex;
     flex-direction: column;
-    padding: 2rem;
+    padding: 2rem 2rem 1rem 2rem;
     background-color: map-get($colors, 'dark-blue');
     border-radius: 10px 100px 10px 10px;
     &__logo {
@@ -33,8 +40,6 @@ main {
             background-color: map-get($colors, 'very-dark-blue');
             border-radius: 10px;
             margin-right: 10px;
-            width: 25px;
-            height: 20px;
             cursor: pointer;
         }
     }
@@ -63,12 +68,13 @@ main {
         padding: 0.2rem;
         &--used {
             width: 70%;
-            height: 8.4px;
+            height: 9px;
             border-radius: 10px;
             background: linear-gradient(to right, map-get($colors, 'gradient-from') , map-get($colors, 'gradient-to'));
             padding: 0.2rem;
             display: flex;
             justify-content: flex-end;
+            align-items: center;
         }
         &--scroll {
             height: 10px;
@@ -96,6 +102,9 @@ main {
         text-transform: uppercase;
         position: absolute;
         left: 33%;
+        transform: translateX(-18px);
+        text-align: center;
+        vertical-align: baseline;
         span {
             font-size: 0.8rem;
             color: map-get($colors, 'grayish-blue');
